# Medi_Verify_Counterfeit-Drug-Detection

./: README.md  main.py  requirements.txt  scanner.py  tempCodeRunnerFile.py
bits_backend/: Cargo.toml  bits_backend.did
bits_backend/src/: lib.rs
bits_frontend/: package.json
bits_frontend/src/: App.css  App.jsx
bits_frontend/src/components/: AdminSection.jsx  AlertContainer.jsx  LoadingModal.jsx  LogsSection.jsx  ScanSection.jsx  VerifySection.jsx
bits_frontend/src/services/: api.js  ic-backend.js
bits_frontend/src/utils/: helpers.js  storage.js
declarations/bits_backend/: bits_backend.did.d.ts  bits_backend.did.js  index.d.ts  index.js
declarations/bits_frontend/: index.d.ts  index.js
