[package]
name = "bits_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
serde = { version = "1.0", features = ["derive"] }
ic-stable-structures = "0.6"
sha2 = "0.10"   # For generating blockchain-like hashes
hex = "0.4"     # For converting hash bytes to hex strings

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
